--- a/components/block-plans.html
+++ b/components/block-plans.html
@@ -7,7 +7,7 @@
           <span class="plan__price">$14</span>
           <span class="plan__billing-cycle">/month</span>
           <span class="badge badge--secondary badge--small">10% OFF</span>
-          <span class="plan__description">East start on the cloud</span>
+          <span class="plan__description">Easy start on the cloud</span>
         </header>
         <div class="card__body">
           <ul class="list list--tick">
