--- a/components/callouts.html
+++ b/components/callouts.html
@@ -3,9 +3,8 @@
     <div class="callout__content">
       <h2 class="callout__heading">Ready to Get Started?</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
-        voluptate tempora qui distinctio consequatur aliquid pariatur cupiditate
-        quas cum fugit.
+        Choose the hosting provider that helps you start easy, build fast, and
+        grow strong! It's risk free with our 14-day money back guarantee.
       </p>
     </div>
     <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
